display and select pins on map

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,11 @@
 {
     "placeholder": {
-        "test": "test"
+        "test": "placeholder translation en"
+
+    },
+    "app" : {
+        "map" : {
+            "waiting" : "Waiting for geolocation ..."
+        }
     }
 }
