--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,5 +1,11 @@
 {
     "placeholder": {
-        "test": "testRU"
+        "test": "placeholder translation ru"
+
+    },
+    "app" : {
+        "map" : {
+            "waiting" : "Ждем геолокации..."
+        }
     }
 }
