added translation to footer

--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -1,5 +1,8 @@
 {
-    "placeholder": {
-        "test": "testRU"
+    "footer": {
+        "title": "Government ContactsRU",
+        "securityService": "Security Service of UkraineRU",
+        "borderService": "State Border Guard Service of UkraineRU"
     }
+    
 }
