--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -1,5 +1,8 @@
 {
-    "placeholder": {
-        "test": "testUA"
+    "footer": {
+        "title": "Government ContactsUA",
+        "securityService": "Security Service of UkraineUA",
+        "borderService": "State Border Guard Service of UkraineUA"
     }
+    
 }
