--- a/src/assets/i18n/us.json
+++ b/src/assets/i18n/us.json
@@ -1,5 +1,8 @@
 {
-    "placeholder": {
-        "test": "testUS"
+    "footer": {
+        "title": "Government Contacts",
+        "securityService": "Security Service of Ukraine",
+        "borderService": "State Border Guard Service of Ukraine"
     }
+    
 }
