--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -3,6 +3,19 @@
         "title": "Government ContactsRU",
         "securityService": "Security Service of UkraineRU",
         "borderService": "State Border Guard Service of UkraineRU"
+    },
+    "statusPanel": {
+        "statusSection": {
+            "title": "[RU] General Status",
+            "newsWidget": {
+                "text": "[RU] Here you can find important news updates about your area.",
+                "viewBtnText": "[RU] View news"
+            }
+        },
+        "sendReuqestSection": {
+            "text": "[RU] It will be helpful if you inform us through this form about any issues by using our service.",
+            "inputPlaceholder": "[RU] Leave us a message",
+            "submitBtnText": "[RU] Send"
+        }
     }
-    
 }
