--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,5 +17,9 @@
             "inputPlaceholder": "Leave us a message",
             "submitBtnText": "Send"
         }
+    },
+    "tabs": {
+        "overview": "Overview",
+        "changeHistory": "Change History"
     }
 }
